bridge/base/0-draft-demo-namespace.yaml
#! 0-draft-demo-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: draft-demo
    labels:
        com.docker.compose.project: draft-demo
