bridge/base/redis-server-expose.yaml
#! redis-server-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: redis-server
    namespace: draft-demo
    labels:
        com.docker.compose.project: draft-demo
        com.docker.compose.service: redis-server
spec:
    selector:
        com.docker.compose.project: draft-demo
        com.docker.compose.service: redis-server
    ports:
        - name: redis-serv-6379
          port: 6379
          targetPort: redis-serv-6379
