bridge/base/redis-server-service.yaml
# check if there is at least one published port

#! redis-server-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: redis-server-published
    namespace: draft-demo
    labels:
        com.docker.compose.project: draft-demo
        com.docker.compose.service: redis-server
spec:
    selector:
        com.docker.compose.project: draft-demo
        com.docker.compose.service: redis-server
    ports:
        - name: redis-serv-6379
          port: 6379
          protocol: TCP
          targetPort: redis-serv-6379

# check if there is at least one published port
